<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/intra_list_item_padding">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:text="@string/announcement_title"/>

    <EditText
      android:id="@+id/announcement_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:hint="@string/announcement_title_hint"
      android:inputType="textCapWords"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:text="@string/announcement_details"/>

    <EditText
      android:id="@+id/announcement_details"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:hint="@string/announcement_details_hint"
      android:inputType="textMultiLine"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:text="@string/poster"/>

    <Spinner
      android:id="@+id/announcement_poster"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"/>

    <CheckBox
      android:id="@+id/announcement_pinned"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:text="@string/announcement_pinned"/>

    <CheckBox
      android:id="@+id/announcement_push"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:text="@string/announcement_push_now"/>

  </LinearLayout>

</ScrollView>