<?xml version="1.0" encoding="utf-8"?>
<!-- TODO MAKE THIS LOOK NOT LIKE SHIT
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="6dp"
        android:id="@+id/nav_drawer_countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="24sp"
        android:text="@string/countdown"/>

    <TextView
        android:layout_marginTop="6dp"
        android:id="@+id/nav_drawer_announcements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="24sp"
        android:text="@string/announcements"/>

    <TextView
        android:layout_marginTop="6dp"
        android:id="@+id/nav_drawer_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="24sp"
        android:text="@string/schedule"/>

    <TextView
        android:layout_marginTop="6dp"
        android:id="@+id/nav_drawer_sponsors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="24sp"
        android:text="@string/sponsors"/>

    <TextView
        android:layout_marginTop="6dp"
        android:id="@+id/nav_drawer_awards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="24sp"
        android:text="@string/awards"/>

</LinearLayout>
