<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/intra_list_item_padding">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:text="@string/event_title"/>

    <EditText
      android:id="@+id/event_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:hint="@string/event_title_hint"
      android:inputType="textCapWords"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:text="@string/event_details"/>

    <EditText
      android:id="@+id/event_details"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:hint="@string/event_details_hint"
      android:inputType="textMultiLine"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:text="@string/host"/>

    <Spinner
      android:id="@+id/event_host"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"

      android:text="@string/location"/>

    <Spinner
      android:id="@+id/event_location"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"
      android:text="@string/time"/>

    <DatePicker
      android:id="@+id/event_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"

      android:calendarViewShown="false"/>

    <TimePicker
      android:id="@+id/event_time"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/intra_list_item_padding"/>

  </LinearLayout>

</ScrollView>