<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

  <ImageView
    android:id="@+id/login_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:contentDescription="@string/login_background_description"/>

  <LinearLayout
    android:id="@+id/login_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mhacks.android.ui.LoginActivity">

    <ImageView
      android:id="@+id/login_logo"
      android:layout_width="240dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"

      android:scaleType="fitCenter"
      android:adjustViewBounds="true"
      android:src="@drawable/mhacks_frame_light"
      android:contentDescription="@string/mhacks_logo"/>

    <Button
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:text="@string/log_in"/>

  </LinearLayout>

</FrameLayout>
